[tool.poetry]
name = "scrape-my-bike"
version = "0.1.0"
description = "Scraping images from eBay Kleinanzeigen"
authors = ["Tilman Krokotsch <t.krokotsch@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^3.141.0"
certifi = "^2021.10.8"

[tool.poetry.dev-dependencies]
black = {extras = ["d"], version = "^22.3.0"}
responses = "^0.20.0"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
